other/b-d/check-serviceaccount/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-sa
policies:
- ../check-serviceaccount.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: check-sa
  resources:
  - badpod01
  result: fail
  rule: check-sa
- kind: Pod
  policy: check-sa
  resources:
  - goodpod01
  result: pass
  rule: check-sa
variables: values.yaml
